# meal-api-code-challenge

./: .env  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  lint.sh  pyproject.toml
ayble_health_api/: __main__.py  conftest.py  settings.py
ayble_health_api/business/: food.py
ayble_health_api/db/: base.py  utils.py
ayble_health_api/db/dao/: meal_dao.py  user_dao.py
ayble_health_api/db/models/: __init__.py  meal_model.py  user_model.py
ayble_health_api/tests/: test_meal_api.py  test_user_api.py
ayble_health_api/web/: application.py  lifetime.py
ayble_health_api/web/api/: router.py
ayble_health_api/web/api/docs/: __init__.py
ayble_health_api/web/api/meal/: __init__.py  meal_schema.py  meal_views.py
ayble_health_api/web/api/user/: __init__.py  user_schema.py  user_views.py
example_data/: payload_add_meal.json  payload_add_user.json  payload_update_portion.json
