[tool.poetry]
name = "ayble_health_api"
version = "0.1.0"
description = ""
authors = [

]
maintainers = [

]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = { version = "^0.20.0", extras = ["standard"] }
pydantic = {version = "^1.10.4", extras = ["dotenv"]}
yarl = "^1.8.2"
ujson = "^5.7.0"
SQLAlchemy = {version = "^2.0.0", extras = ["asyncio"]}
aiosqlite = "^0.18.0"
aiofiles = "^22.1.0"
httptools = "^0.5.0"


[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
mypy = "^1.1.1"
isort = "^5.11.4"
pytest-cov = "^4.0.0"
anyio = "^3.6.2"
pytest-env = "^0.8.1"
httpx = "^0.23.3"
ruff = "^0.0.263"
taskiq = { version = "^0", extras = ["reload"] }


[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

env = [
    "AYBLE_HEALTH_API_ENVIRONMENT=pytest",
    "AYBLE_HEALTH_API_DB_FILE=test_db.sqlite3",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
exclude = [
    "./.cache",
    "./.git",
    "./.idea",
    "./.mypy_cache",
    "./.pytest_cache",
    "./.venv",
    "./venv",
    "./env",
    "./cached_venv",
    "./docs",
    "./deploy",
    "./var",
    "./.vscode",
    "*migrations*",
]
]
line-length = 88
select = [
  "E",
  "F"
]

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.ruff.mccabe]
max-complexity = 6

[tool.ruff.per-file-ignores]
"__init__.py" = [
    # ignore "A module has been imported but is not used anywhere in the file"
    # to support exporting from module
    "F401",
    # similar to above, ignore errors related to wildcard imports
    "F403",
]

# allow `assert` in tests
"tests_*.py" = ["S101"]
"test_*.py" = ["S101"]
"tests.py" = ["S101"]
"*/tests/*" = ["S101"]
"conftest.py" = ["S101"]

